# TAIGA

./: .gitignore  Cargo.toml  README.md  build.sh
docs/: ARCHITECTURE.md  Design doc.md
firmware/: Cargo.toml
firmware/taiga-cam/: Cargo.toml
firmware/taiga-cam/.cargo/: config.toml
firmware/taiga-cam/src/: main.rs
firmware/taiga-rp2040/: Cargo.toml  build.rs
firmware/taiga-rp2040/src/: main.rs
software/: Cargo.toml
software/ai-ml/: Cargo.toml
software/ai-ml/src/: main.rs
software/base-station/: Cargo.toml
software/base-station/migrations/: 20240101000001_initial.sql  20240101000002_lightning.sql
software/base-station/src/: main.rs
software/tools/: Cargo.toml
software/tools/src/: main.rs
