[workspace]
members = [
    "taiga-cam",
    "taiga-rp2040"
]
resolver = "2"

[workspace.dependencies]
# Embedded-specific dependencies
embassy-executor = "0.5"
embassy-time = "0.3"
embassy-sync = "0.5"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
serde = { version = "1.0", default-features = false }
heapless = "0.8"
nb = "1.0"
nalgebra = { version = "0.32", default-features = false }
fixed = "1.24"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7"
cortex-m = "0.7"

[profile.release]
opt-level = "s"
debug = 2
lto = true

[profile.dev]
debug = 2
opt-level = 1