[workspace]
members = [
    "base-station",
    "ai-ml",
    "tools"
]
resolver = "2"

[workspace.dependencies]
# Host software dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.24", default-features = false }

[profile.release]
opt-level = 3
debug = 2
lto = true

[profile.dev]
debug = 2
opt-level = 1