[package]
name = "taiga-cam"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taiga-cam"
path = "src/main.rs"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32s3"] }
esp-backtrace = { version = "0.14", features = ["esp32s3", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.11", features = ["esp32s3"] }

