[package]
name = "taiga-ai-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
image = { workspace = true }

# ML/AI specific dependencies
ort = "1.15"  # ONNX Runtime
ndarray = "0.15"