[package]
name = "taiga-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serialport = { version = "4.0", default-features = false }